fixed alignment and font sizes

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,68 @@
+.border {
+    border: 25px black;
+}
+
+
+
 body {
-    background-color: #F1F0E8;
+    background-color: whitesmoke;
+    text-align: center;
+    list-style-position: inside;
+    margin-bottom: 100px; 
 }
 
 .top-sect {
-background: #F1F0E8;
+
+text-align: center;
 }
 
 .title {
     text-align: center;
+    font-family: sans-serif;
+    font-size: 30px;
 }
+
+.contents {
+    font-family: 'sans-serif';
+    color: black;
+    font-size: 25px;
+    text-align: center;
+}
+
+.stir-fry-png 
+{
+  height: auto;
+  width: 500px;
+  display: block;
+  margin: 0 auto;
+
+}
+
+.mid {
+    text-align: center;
+}
+
+.text-box {
+    width: 1000px; /* Set the desired width for the text box */
+    margin: 0 auto; /* Center the text box horizontally */
+    border: 0px solid #ccc; /* Optional: Add a border for visualization */
+    padding: 10px; /* Optional: Add padding for spacing */
+  }
+
+  .text-box-list {
+    width: 500px; /* Set the desired width for the text box */
+    margin: 0 auto; /* Center the text box horizontally */
+    border: 0px solid #ccc; /* Optional: Add a border for visualization */
+    padding: 10px; /* Optional: Add padding for spacing */
+  }
+
+  .line-height {
+    line-height: 1.0
+  }
+
+  .times-new-roman {
+    font-family: 'Times New Roman', Times, serif;
+  }
+
+  
 
